Update reference files

--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -797,12 +797,23 @@ j3100colorscroll = false
 #DOSBOX-X-ADV:j3100textcolor   = 
 
 [video]
+#DOSBOX-X-ADV:#                 int 10h use video parameter table: If set, INT 10h will use the video parameter table for standard EGA/VGA modes.
+#DOSBOX-X-ADV:#                                                      If not set, internal modesetting will be used, same as DOSBox and most forks do.
+#DOSBOX-X-ADV:#                                                      If auto, the video parameter table will be used if any DOS program redirects the table (usually to override mode setting parameters)
+#DOSBOX-X-ADV:#                                                      Possible values: auto, true, false, 1, 0.
 #DOSBOX-X-ADV:#                                         vmemdelay: VGA Memory I/O delay in nanoseconds. Set to -1 to use default, 0 to disable.
 #DOSBOX-X-ADV:#                                                      Default off. Enable this option (-1 or nonzero) if you are running a game or
 #DOSBOX-X-ADV:#                                                      demo that needs slower VGA memory (like that of older ISA hardware) to work properly.
 #DOSBOX-X-ADV:#                                                      If your game is not sensitive to VGA RAM I/O speed, then turning on this option
 #DOSBOX-X-ADV:#                                                      will do nothing but cause a significant drop in frame rate which is probably not
 #DOSBOX-X-ADV:#                                                      what you want. Recommended values -1, 0 to 2000.
+#DOSBOX-X-ADV:#                                   prevent capture: This option allows you to prevent capture of the DOSBox window, if an API is provided by the system to do so.
+#DOSBOX-X-ADV:#                                                      empty or none: the window is normal and it can be screen captured.
+#DOSBOX-X-ADV:#                                                      blank: notify the system so that if a screenshot is attempted, the window appears blank.
+#DOSBOX-X-ADV:#                                                      invisible: notify the system not to include the DOSBox window in screen capture.
+#DOSBOX-X-ADV:#                                                      
+#DOSBOX-X-ADV:#                                                      This option may be useful if you would like to prevent your DOS gaming from appearing in the Windows 11 Recall feature
+#DOSBOX-X-ADV:#                                                      Possible values: , none, blank, invisible.
 #                                          vmemsize: Amount of video memory in megabytes.
 #                                                        The maximum resolution and color depth the svga_s3 will be able to display
 #                                                        is determined by this value.
@@ -996,9 +1007,11 @@ j3100colorscroll = false
 #                                                      Possible values: true, false, 1, 0, auto.
 #DOSBOX-X-ADV-SEE:#
 #DOSBOX-X-ADV-SEE:# Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-#DOSBOX-X-ADV-SEE:# -> vmemdelay; vbe window granularity; vbe window size; enable 8-bit dac; svga lfb base; pci vga; vga attribute controller mapping; enable supermegazeux tweakmode; vga bios use rom image; vga bios rom image; vga bios size override; video bios dont duplicate cga first half rom font; video bios always offer 14-pixel high rom font; video bios always offer 16-pixel high rom font; video bios enable cga second half rom font; forcerate; sierra ramdac; sierra ramdac lock 565; vga fill active memory; page flip debug line; vertical retrace poll debug line; cgasnow; vga 3da undefined bits; rom bios 8x8 CGA font; rom bios video parameter table; int 10h points at vga bios; unmask timer on int 10 setmode; vesa bank switching window mirroring; vesa bank switching window range check; vesa zero buffer on get information; vesa set display vsync; vesa lfb base scanline adjust; vesa map non-lfb modes to 128kb region; ega per scanline hpel; allow hpel effects; allow hretrace effects; hretrace effect weight; vesa modelist cap; vesa modelist width limit; vesa modelist height limit; vesa vbe put modelist in vesa information; vesa vbe 1.2 modes are 32bpp; allow low resolution vesa modes; allow explicit 24bpp vesa modes; allow high definition vesa modes; allow unusual vesa modes; allow 32bpp vesa modes; allow 24bpp vesa modes; allow 16bpp vesa modes; allow 15bpp vesa modes; allow 8bpp vesa modes; allow 4bpp vesa modes; allow 4bpp packed vesa modes; allow tty vesa modes; double-buffered line compare; ignore vblank wraparound; ignore extended memory bit; enable vga resize delay; resize only on vga active display width increase; vga palette update on full load; ignore odd-even mode in non-cga modes; ignore sequencer blanking
+#DOSBOX-X-ADV-SEE:# -> int 10h use video parameter table; vmemdelay; prevent capture; vbe window granularity; vbe window size; enable 8-bit dac; svga lfb base; pci vga; vga attribute controller mapping; enable supermegazeux tweakmode; vga bios use rom image; vga bios rom image; vga bios size override; video bios dont duplicate cga first half rom font; video bios always offer 14-pixel high rom font; video bios always offer 16-pixel high rom font; video bios enable cga second half rom font; forcerate; sierra ramdac; sierra ramdac lock 565; vga fill active memory; page flip debug line; vertical retrace poll debug line; cgasnow; vga 3da undefined bits; rom bios 8x8 CGA font; rom bios video parameter table; int 10h points at vga bios; unmask timer on int 10 setmode; vesa bank switching window mirroring; vesa bank switching window range check; vesa zero buffer on get information; vesa set display vsync; vesa lfb base scanline adjust; vesa map non-lfb modes to 128kb region; ega per scanline hpel; allow hpel effects; allow hretrace effects; hretrace effect weight; vesa modelist cap; vesa modelist width limit; vesa modelist height limit; vesa vbe put modelist in vesa information; vesa vbe 1.2 modes are 32bpp; allow low resolution vesa modes; allow explicit 24bpp vesa modes; allow high definition vesa modes; allow unusual vesa modes; allow 32bpp vesa modes; allow 24bpp vesa modes; allow 16bpp vesa modes; allow 15bpp vesa modes; allow 8bpp vesa modes; allow 4bpp vesa modes; allow 4bpp packed vesa modes; allow tty vesa modes; double-buffered line compare; ignore vblank wraparound; ignore extended memory bit; enable vga resize delay; resize only on vga active display width increase; vga palette update on full load; ignore odd-even mode in non-cga modes; ignore sequencer blanking
 #DOSBOX-X-ADV-SEE:#
+#DOSBOX-X-ADV:int 10h use video parameter table                 = auto
 #DOSBOX-X-ADV:vmemdelay                                         = 0
+#DOSBOX-X-ADV:prevent capture                                   = 
 vmemsize                                          = -1
 vmemsizekb                                        = 0
 #DOSBOX-X-ADV:vbe window granularity                            = 0
@@ -2140,6 +2153,10 @@ timeout     = 0
 
 [dos]
 #                                              xms: Enable XMS support.
+#DOSBOX-X-ADV:#                xms memmove causes flat real mode: If set, any call to XMS to move/copy memory sets up flat real mode for segment registers DS and ES.
+#DOSBOX-X-ADV:#                   xms init causes flat real mode: If set, when the DOS kernel initializes XMS it will switch on flat real mode for segment registers DS and ES if appropriate.
+#DOSBOX-X-ADV:#      resized free memory block becomes allocated: If set, and the DOS application resizes a freed memory block, that block will be marked as allocated to that program.
+#DOSBOX-X-ADV:#                                                     MS-DOS behaves in this manner, apparently.
 #                                      xms handles: Number of XMS handles available for the DOS environment, or 0 to use a reasonable default
 #                  shell configuration as commands: Allow entering dosbox-x.conf configuration parameters as shell commands to get and set settings.
 #                                                     This is disabled by default to avoid conflicts between commands and executables.
@@ -2250,6 +2267,7 @@ timeout     = 0
 #DOSBOX-X-ADV:#                                                     However, forcing allocation on an even megabyte will also cause some extended memory fragmentation and reduce the
 #DOSBOX-X-ADV:#                                                     overall amount of extended memory available to the DOS game depending on whether it expects large contiguous chunks
 #DOSBOX-X-ADV:#                                                     of extended memory.
+#DOSBOX-X-ADV:#                                        ems frame: Segment of the EMS page frame, if set. C000, D000, or E000
 #                                              umb: Enable UMB support.
 #DOSBOX-X-ADV:#                                        umb start: UMB region starting segment
 #DOSBOX-X-ADV:#                                          umb end: UMB region last segment
@@ -2301,6 +2319,16 @@ timeout     = 0
 #DOSBOX-X-ADV:#                                       startincon: START command will start these commands (separated by space) in a console and wait for a key press before exiting.
 #                                           vmware: Enable VMware interface emulation including guest mouse integration (when used along with e.g. VMware mouse driver for Windows 3.x).
 #                                            int33: Enable INT 33H for mouse support.
+#DOSBOX-X-ADV:#                                      int33 max x: For guest to host cursor integration with DOS games, assume the maximum reported X coordinate has this value, if this is nonzero.
+#DOSBOX-X-ADV:#                                                     Use this option if the automatic range detection fails to work correctly with the DOS game and the cursor doesn't match the host cursor position.
+#DOSBOX-X-ADV:#                                                     - Lemmings 2: Use X=640 Y=400
+#DOSBOX-X-ADV:#                                      int33 max y: For guest to host cursor integration with DOS games, assume the maximum reported Y coordinate has this value, if this is nonzero.
+#DOSBOX-X-ADV:#                                                     Use this option if the automatic range detection fails to work correctly with the DOS game and the cursor doesn't match the host cursor position.
+#DOSBOX-X-ADV:#                                                     - See the max X setting for a list of games
+#DOSBOX-X-ADV:#                                  int33 xy adjust: A list of adjustments to INT 33h position adjustments to help align the guest cursor to the host. name=value, comma separated
+#DOSBOX-X-ADV:#                                                     x=spec, y=spec
+#DOSBOX-X-ADV:#                                                     spec:   <number>    position adjust, can be positive or negative
+#DOSBOX-X-ADV:#                                                             max-excess  if game sets maximum larger than int33 max x/y, adjust the position forward by the difference
 #                                mouse report rate: Mouse reporting rate, or 0 for auto. This affects how often mouse events are reported to the guest through the mouse interrupt.
 #                                                     Some games including CyClone need a lower reporting rate to function correctly. Auto mode allows the guest to change the report rate through the PS/2 mouse emulation.
 #                                                     This option does not affect any DOS game that uses polling through INT 33h to detect mouse movement.
@@ -2349,12 +2377,16 @@ timeout     = 0
 #                                                     If unset or invalid, the default name CLIP$ will be used (e.g. "TYPE CLIP$" shows the clipboard contents).
 #                                                     It has no effect if "dos clipboard device enable" is disabled, and it is deactivated if the secure mode is enabled.
 #                                dos clipboard api: If set, DOS APIs for communications with the Windows clipboard will be enabled for shared clipboard communications.
+#                                                     Caution: Enabling this API may cause some programs to think they are running under Windows
 #                                     dos idle api: If set, DOSBox-X can lower the host system's CPU load when a supported guest program is idle.
 #DOSBOX-X-ADV-SEE:#
 #DOSBOX-X-ADV-SEE:# Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-#DOSBOX-X-ADV-SEE:# -> badcommandhandler; mscdex device name; hma allow reservation; command shell flush keyboard buffer; special operation file prefix; drive z is remote; drive z convert fat; drive z expand path; drive z hide files; hidenonrepresentable; hma minimum allocation; dos sda size; hma free space; cpm compatibility mode; minimum dos initial private segment; minimum mcb segment; enable dummy device mcb; maximum environment block size on exec; additional environment block size on exec; enable a20 on windows init; zero memory on xms memory allocation; vcpi; unmask timer on disk io; zero int 67h if no ems; zero unused int 68h; emm386 startup active; zero memory on ems memory allocation; ems system handle memory size; ems system handle on even megabyte; umb start; umb end; kernel allocation in umb; keep umb on boot; keep private area on boot; private area in umb; autoa20fix; autoloadfix; startincon; int33 hide host cursor if interrupt subroutine; int33 hide host cursor when polling; int33 disable cell granularity; int 13 disk change detect; int 13 extensions; biosps2; int15 wait force unmask irq; int15 mouse callback does not preserve registers; filenamechar; collating and uppercase; con device use int 16h to detect keyboard input; zero memory on int 21h memory allocation; pipe temporary device
+#DOSBOX-X-ADV-SEE:# -> xms memmove causes flat real mode; xms init causes flat real mode; resized free memory block becomes allocated; badcommandhandler; mscdex device name; hma allow reservation; command shell flush keyboard buffer; special operation file prefix; drive z is remote; drive z convert fat; drive z expand path; drive z hide files; hidenonrepresentable; hma minimum allocation; dos sda size; hma free space; cpm compatibility mode; minimum dos initial private segment; minimum mcb segment; enable dummy device mcb; maximum environment block size on exec; additional environment block size on exec; enable a20 on windows init; zero memory on xms memory allocation; vcpi; unmask timer on disk io; zero int 67h if no ems; zero unused int 68h; emm386 startup active; zero memory on ems memory allocation; ems system handle memory size; ems system handle on even megabyte; ems frame; umb start; umb end; kernel allocation in umb; keep umb on boot; keep private area on boot; private area in umb; autoa20fix; autoloadfix; startincon; int33 max x; int33 max y; int33 xy adjust; int33 hide host cursor if interrupt subroutine; int33 hide host cursor when polling; int33 disable cell granularity; int 13 disk change detect; int 13 extensions; biosps2; int15 wait force unmask irq; int15 mouse callback does not preserve registers; filenamechar; collating and uppercase; con device use int 16h to detect keyboard input; zero memory on int 21h memory allocation; pipe temporary device
 #DOSBOX-X-ADV-SEE:#
 xms                                              = true
+#DOSBOX-X-ADV:xms memmove causes flat real mode                = true
+#DOSBOX-X-ADV:xms init causes flat real mode                   = false
+#DOSBOX-X-ADV:resized free memory block becomes allocated      = true
 xms handles                                      = 0
 shell configuration as commands                  = false
 #DOSBOX-X-ADV:badcommandhandler                                = 
@@ -2396,6 +2428,7 @@ ems                                              = true
 #DOSBOX-X-ADV:zero memory on ems memory allocation             = false
 #DOSBOX-X-ADV:ems system handle memory size                    = 384
 #DOSBOX-X-ADV:ems system handle on even megabyte               = false
+#DOSBOX-X-ADV:ems frame                                        = 0
 umb                                              = true
 #DOSBOX-X-ADV:umb start                                        = 0
 #DOSBOX-X-ADV:umb end                                          = 0
@@ -2421,6 +2454,9 @@ startquiet                                       = false
 #DOSBOX-X-ADV:startincon                                       = assoc attrib chcp copy dir echo for ftype help if set type ver vol xcopy
 vmware                                           = true
 int33                                            = true
+#DOSBOX-X-ADV:int33 max x                                      = 0
+#DOSBOX-X-ADV:int33 max y                                      = 0
+#DOSBOX-X-ADV:int33 xy adjust                                  = 
 mouse report rate                                = 0
 #DOSBOX-X-ADV:int33 hide host cursor if interrupt subroutine   = true
 #DOSBOX-X-ADV:int33 hide host cursor when polling              = false
@@ -2440,7 +2476,7 @@ dbcs                                             = true
 #DOSBOX-X-ADV:pipe temporary device                            = true
 dos clipboard device enable                      = false
 dos clipboard device name                        = CLIP$
-dos clipboard api                                = true
+dos clipboard api                                = false
 dos idle api                                     = true
 
 [ipx]
@@ -2740,8 +2776,8 @@ rem = This section is the 4DOS.INI file, if you use 4DOS as the command shell
 #              Possible values: on, off.
 #     shell: Specifies the command shell (COMMAND.COM or 4DOS.COM).
 #       dos: Reports whether DOS occupies HMA and allocates UMB memory (if available).
-#      fcbs: Number of FCB handles available to DOS programs (1-255).
-#     files: Number of file handles available to DOS programs (8-255).
+#      fcbs: Number of FCB handles available to DOS programs (1-255). Set to 0 to automatically use a reasonable default.
+#     files: Number of file handles available to DOS programs (8-255). Set to 0 to automatically use a reasonable default.
 #   country: Country code for date/time/decimal formats and optionally code page for TTF output and language files.
 # lastdrive: The maximum drive letter (A-Z) that can be accessed by programs.
 #              Possible values: a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z.
@@ -2750,8 +2786,8 @@ break       = off
 numlock     = 
 shell       = 
 dos         = high, umb
-fcbs        = 100
-files       = 200
+fcbs        = 0
+files       = 0
 country     = 
 lastdrive   = a
 set path    = Z:\;Z:\SYSTEM;Z:\BIN;Z:\DOS;Z:\4DOS;Z:\DEBUG;Z:\TEXTUTIL
