--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -773,12 +773,23 @@ j3100backcolor   =
 j3100textcolor   = 
 
 [video]
+#                 int 10h use video parameter table: If set, INT 10h will use the video parameter table for standard EGA/VGA modes.
+#                                                      If not set, internal modesetting will be used, same as DOSBox and most forks do.
+#                                                      If auto, the video parameter table will be used if any DOS program redirects the table (usually to override mode setting parameters)
+#                                                      Possible values: auto, true, false, 1, 0.
 #                                         vmemdelay: VGA Memory I/O delay in nanoseconds. Set to -1 to use default, 0 to disable.
 #                                                      Default off. Enable this option (-1 or nonzero) if you are running a game or
 #                                                      demo that needs slower VGA memory (like that of older ISA hardware) to work properly.
 #                                                      If your game is not sensitive to VGA RAM I/O speed, then turning on this option
 #                                                      will do nothing but cause a significant drop in frame rate which is probably not
 #                                                      what you want. Recommended values -1, 0 to 2000.
+#                                   prevent capture: This option allows you to prevent capture of the DOSBox window, if an API is provided by the system to do so.
+#                                                      empty or none: the window is normal and it can be screen captured.
+#                                                      blank: notify the system so that if a screenshot is attempted, the window appears blank.
+#                                                      invisible: notify the system not to include the DOSBox window in screen capture.
+#                                                      
+#                                                      This option may be useful if you would like to prevent your DOS gaming from appearing in the Windows 11 Recall feature
+#                                                      Possible values: , none, blank, invisible.
 #                                          vmemsize: Amount of video memory in megabytes.
 #                                                        The maximum resolution and color depth the svga_s3 will be able to display
 #                                                        is determined by this value.
@@ -970,7 +981,9 @@ j3100textcolor   =
 #                                                      May provide a performance benefit to most DOS games. However this may also break timing-dependent game or Demoscene effects.
 #                                                      Default auto, which will turn if off for VGA modes and turn it on for SVGA modes.
 #                                                      Possible values: true, false, 1, 0, auto.
+int 10h use video parameter table                 = auto
 vmemdelay                                         = 0
+prevent capture                                   = 
 vmemsize                                          = -1
 vmemsizekb                                        = 0
 vbe window granularity                            = 0
@@ -2080,6 +2093,10 @@ timeout     = 0
 
 [dos]
 #                                              xms: Enable XMS support.
+#                xms memmove causes flat real mode: If set, any call to XMS to move/copy memory sets up flat real mode for segment registers DS and ES.
+#                   xms init causes flat real mode: If set, when the DOS kernel initializes XMS it will switch on flat real mode for segment registers DS and ES if appropriate.
+#      resized free memory block becomes allocated: If set, and the DOS application resizes a freed memory block, that block will be marked as allocated to that program.
+#                                                     MS-DOS behaves in this manner, apparently.
 #                                      xms handles: Number of XMS handles available for the DOS environment, or 0 to use a reasonable default
 #                  shell configuration as commands: Allow entering dosbox-x.conf configuration parameters as shell commands to get and set settings.
 #                                                     This is disabled by default to avoid conflicts between commands and executables.
@@ -2190,6 +2207,7 @@ timeout     = 0
 #                                                     However, forcing allocation on an even megabyte will also cause some extended memory fragmentation and reduce the
 #                                                     overall amount of extended memory available to the DOS game depending on whether it expects large contiguous chunks
 #                                                     of extended memory.
+#                                        ems frame: Segment of the EMS page frame, if set. C000, D000, or E000
 #                                              umb: Enable UMB support.
 #                                        umb start: UMB region starting segment
 #                                          umb end: UMB region last segment
@@ -2241,6 +2259,16 @@ timeout     = 0
 #                                       startincon: START command will start these commands (separated by space) in a console and wait for a key press before exiting.
 #                                           vmware: Enable VMware interface emulation including guest mouse integration (when used along with e.g. VMware mouse driver for Windows 3.x).
 #                                            int33: Enable INT 33H for mouse support.
+#                                      int33 max x: For guest to host cursor integration with DOS games, assume the maximum reported X coordinate has this value, if this is nonzero.
+#                                                     Use this option if the automatic range detection fails to work correctly with the DOS game and the cursor doesn't match the host cursor position.
+#                                                     - Lemmings 2: Use X=640 Y=400
+#                                      int33 max y: For guest to host cursor integration with DOS games, assume the maximum reported Y coordinate has this value, if this is nonzero.
+#                                                     Use this option if the automatic range detection fails to work correctly with the DOS game and the cursor doesn't match the host cursor position.
+#                                                     - See the max X setting for a list of games
+#                                  int33 xy adjust: A list of adjustments to INT 33h position adjustments to help align the guest cursor to the host. name=value, comma separated
+#                                                     x=spec, y=spec
+#                                                     spec:   <number>    position adjust, can be positive or negative
+#                                                             max-excess  if game sets maximum larger than int33 max x/y, adjust the position forward by the difference
 #                                mouse report rate: Mouse reporting rate, or 0 for auto. This affects how often mouse events are reported to the guest through the mouse interrupt.
 #                                                     Some games including CyClone need a lower reporting rate to function correctly. Auto mode allows the guest to change the report rate through the PS/2 mouse emulation.
 #                                                     This option does not affect any DOS game that uses polling through INT 33h to detect mouse movement.
@@ -2289,8 +2317,12 @@ timeout     = 0
 #                                                     If unset or invalid, the default name CLIP$ will be used (e.g. "TYPE CLIP$" shows the clipboard contents).
 #                                                     It has no effect if "dos clipboard device enable" is disabled, and it is deactivated if the secure mode is enabled.
 #                                dos clipboard api: If set, DOS APIs for communications with the Windows clipboard will be enabled for shared clipboard communications.
+#                                                     Caution: Enabling this API may cause some programs to think they are running under Windows
 #                                     dos idle api: If set, DOSBox-X can lower the host system's CPU load when a supported guest program is idle.
 xms                                              = true
+xms memmove causes flat real mode                = true
+xms init causes flat real mode                   = false
+resized free memory block becomes allocated      = true
 xms handles                                      = 0
 shell configuration as commands                  = false
 badcommandhandler                                = 
@@ -2332,6 +2364,7 @@ emm386 startup active                            = false
 zero memory on ems memory allocation             = false
 ems system handle memory size                    = 384
 ems system handle on even megabyte               = false
+ems frame                                        = 0
 umb                                              = true
 umb start                                        = 0
 umb end                                          = 0
@@ -2357,6 +2390,9 @@ startquiet                                       = false
 startincon                                       = assoc attrib chcp copy dir echo for ftype help if set type ver vol xcopy
 vmware                                           = true
 int33                                            = true
+int33 max x                                      = 0
+int33 max y                                      = 0
+int33 xy adjust                                  = 
 mouse report rate                                = 0
 int33 hide host cursor if interrupt subroutine   = true
 int33 hide host cursor when polling              = false
@@ -2376,7 +2412,7 @@ zero memory on int 21h memory allocation         = false
 pipe temporary device                            = true
 dos clipboard device enable                      = false
 dos clipboard device name                        = CLIP$
-dos clipboard api                                = true
+dos clipboard api                                = false
 dos idle api                                     = true
 
 [ipx]
@@ -2664,8 +2700,8 @@ rem = This section is the 4DOS.INI file, if you use 4DOS as the command shell
 #              Possible values: on, off.
 #     shell: Specifies the command shell (COMMAND.COM or 4DOS.COM).
 #       dos: Reports whether DOS occupies HMA and allocates UMB memory (if available).
-#      fcbs: Number of FCB handles available to DOS programs (1-255).
-#     files: Number of file handles available to DOS programs (8-255).
+#      fcbs: Number of FCB handles available to DOS programs (1-255). Set to 0 to automatically use a reasonable default.
+#     files: Number of file handles available to DOS programs (8-255). Set to 0 to automatically use a reasonable default.
 #   country: Country code for date/time/decimal formats and optionally code page for TTF output and language files.
 # lastdrive: The maximum drive letter (A-Z) that can be accessed by programs.
 #              Possible values: a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z.
@@ -2674,8 +2710,8 @@ break       = off
 numlock     = 
 shell       = 
 dos         = high, umb
-fcbs        = 100
-files       = 200
+fcbs        = 0
+files       = 0
 country     = 
 lastdrive   = a
 set path    = Z:\;Z:\SYSTEM;Z:\BIN;Z:\DOS;Z:\4DOS;Z:\DEBUG;Z:\TEXTUTIL
