--- a/.github/workflows/windows-installers.yml
+++ b/.github/workflows/windows-installers.yml
@@ -278,7 +278,7 @@ jobs:
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         uses: actions/cache/save@v4
         with:
-          path: ${{ github.workspace }}/mingw-x64-bin/
+          path: ${{ github.workspace }}/mingw-x64-bin
           key: mingw-x64-bin-r-${{ github.sha }}
   Build_Windows_Installer:
     permissions:
